Se agrega put para modificar estados
